fix: particles and logout button in dark mode

--- a/client/src/pages/home-page/_home-page.scss
+++ b/client/src/pages/home-page/_home-page.scss
@@ -32,10 +32,9 @@
     left: 0;
     z-index: -1;
   }
-  .tsparticles {
-    z-index: 1;
-  }
+
   .tsparticles-canvas-el {
+    z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
